objects/TracRTC__ReRun_Complete_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>TracRTC__Criteria_Logic_On_Create__c</fullName>
        <label>Criteria Logic On Create</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Criteria_Logic__c</fullName>
        <label>Criteria Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Enable_Retry_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Retry Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Enable_Trigger_Time_Delay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Trigger Time Delay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__On_Create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__On_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TracRTC__Retry_Complete_Attempts__c</fullName>
        <label>Retry Complete Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__Retry_Complete_Time_Units__c</fullName>
        <label>Retry Complete Time Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TracRTC__SObject_Name__c</fullName>
        <label>SObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TracRTC__Trigger_Time_Delay_Time_Units__c</fullName>
        <label>Trigger Time Delay Time Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ReRun Complete Settings</label>
</CustomObject>